--- a/usr/src/cmd/abi/appcert/etc/etc.scoped.in
+++ b/usr/src/cmd/abi/appcert/etc/etc.scoped.in
@@ -1,15 +1,14 @@
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -1748,9 +1747,6 @@ SCOPED_SYMBOL|SunOS_5.8|libdevinfo.so.1|devfs_iscbdriver
 SCOPED_SYMBOL|SunOS_5.8|libdevinfo.so.1|devinfo_prop_get_int
 SCOPED_SYMBOL|SunOS_5.8|libdevinfo.so.1|local_addr
 SCOPED_SYMBOL|SunOS_5.10|libdevinfo.so.1|di_devlink_synchronize_db
-SCOPED_SYMBOL|SunOS_5.8|libdmi.so.1|trace_on
-SCOPED_SYMBOL|SunOS_5.8|libdmi.so.1|get_debug_flag
-SCOPED_SYMBOL|SunOS_5.8|libdmi.so.1|set_debug_flag
 SCOPED_SYMBOL|SunOS_5.8|libprint.so.2|dynamic_function
 SCOPED_SYMBOL|SunOS_5.8|libprint.so.2|etc_get_list
 SCOPED_SYMBOL|SunOS_5.8|libprint.so.2|etc_get_name
