--- a/usr/src/pkgdefs/SUNWsacom/Makefile
+++ b/usr/src/pkgdefs/SUNWsacom/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,11 +18,12 @@
 #
 # CDDL HEADER END
 #
+
 #
-# Copyright 1997, 2002, 2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 include ../Makefile.com
@@ -35,7 +35,6 @@ ACTION_all=grep SUNWter depend > /dev/null || \
 	( chmod 666 depend; \
 	echo "P SUNWmibii     Solstice Enterprise Agents SNMP daemon" >> depend; \
 	echo "P SUNWsasnm     Solstice Enterprise Agents Simple Network Management Protocol" >> depend; \
-	echo "P SUNWsadmi     Solstice Enterprise Agents Desktop Management Interface" >> depend; \
 	echo "P SUNWlibC      SPARCompilers Bundled libC" >> depend; \
 	chmod 444 depend )
 
