6242262 ON should be buildable with gcc 6268345 fmd is insufficiently careful with alignment 6271070 gcc and cmd/fm don't get along 6272173 cpumem diag module writes to constant memory, crashing fmd 6273907 gcc and cmd/syseventd don't get along 6308057 gcc and sgs/dis don't get along on SPARC 6359863 the C preprocessor is still feeling abused by token pasting 6359868 gcc and cmd/stmsboot still don't get along 6359878 gcc and lib/smartcard don't get along on sparc 6361816 gcc and perl don't get along 6370832 kernel should agree on C99 mode for studio and gcc 6372728 gcc and sata don't get along 6390345 cw inserts garbage when used as a preprocessor 6397680 gcc and smbios are not getting along 6399113 meta_namespace.c uses worrisome construct and is not gcc friendly 6403999 cw is ugly and hairy and needs a man

--- a/usr/src/cmd/geniconvtbl/native/Makefile
+++ b/usr/src/cmd/geniconvtbl/native/Makefile
@@ -18,6 +18,7 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
@@ -25,36 +26,20 @@
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
 
-PROG:sh=	cd ..; basename `pwd`
-OBJS= $(PROG).o translate.o
-SRCS= $(OBJS:%.o=../%.c)
-
-include ../../Makefile.cmd
-
-INCS +=	-I../../../lib/libzpool/common
-INCS +=	-I../../../uts/common/fs/zfs
-
-LDLIBS += -lzpool -lzfs
-
-C99MODE=	-xc99=%all
-C99LMODE=	-Xc99=%all
-
-CPPFLAGS += -D_LARGEFILE64_SOURCE=1 -D_REENTRANT $(INCS)
-
 .KEEP_STATE:
 
-all: $(PROG)
+NOT_NATIVE = $(POUND_SIGN)              # tell Makefile.com we're native
 
-$(PROG): $(OBJS)
-	$(LINK.c) -o $(PROG) $(OBJS) $(LDLIBS)
-	$(POST_PROCESS)
+include ../Makefile.com
 
-clean:
+CC =		$(NATIVECC)
+LD =		$(NATIVELD)
+CFLAGS =	$(NATIVE_CFLAGS)
+CPPFLAGS =	$(MY_NATIVE_CPPFLAGS)
+LDFLAGS =	$(MY_NATIVE_LDFLAGS)
+LDLIBS =	$(MY_NATIVE_LDLIBS)
+POST_PROCESS =
 
-lint:	lint_SRCS
+all install:	$(PROG)
 
-%.o: ../%.c
-	$(COMPILE.c) $<
-	$(POST_PROCESS_O)
-
-include ../../Makefile.targ
+catalog:
