--- a/usr/src/cmd/sgs/rtld/i386/Makefile
+++ b/usr/src/cmd/sgs/rtld/i386/Makefile
@@ -57,10 +57,9 @@ CRTI=		pics/crti.o
 CRTN=		pics/crtn.o
 CRTS=		$(CRTI)		$(CRTN)
 
-# __GNUC is overridden in the environment when building with gcc
-__GNUC:sh=		echo \\043
+include		$(SRC)/Makefile.master
 
-# We build 32-bit objects with cc by default
+# This is safe because linking is done only with the primary compiler.
 MAPFILE-ORDER =		../common/mapfile-order-devpro
 $(__GNUC)MAPFILE-ORDER =	../common/mapfile-order-gcc
 
