--- a/usr/src/cmd/geniconvtbl/samples/Makefile
+++ b/usr/src/cmd/geniconvtbl/samples/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,11 +18,10 @@
 #
 # CDDL HEADER END
 #
-# Copyright 1999, 2003 Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 # cmd/geniconvtbl/samples/Makefile
 
@@ -41,7 +39,7 @@ OUTPUTFILES	= ISO646%ISO8859-1.bt ISO8859-1%ISO646.bt
 # OUTPUTFILES	= $(INPUTFILES:%.src=%.bt)   NEVER USE ( WATCH OUT FILE NAME )
 
 
-GENICONVTBL= ../$(MACH)/geniconvtbl.native
+GENICONVTBL= ../native/geniconvtbl
 
 
 # include ../../../lib/Makefile.lib
