--- a/usr/src/lib/Makefile.targ
+++ b/usr/src/lib/Makefile.targ
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,6 +18,7 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
@@ -96,7 +96,7 @@ $(DYNLIBCCC): pics .WAIT $$(PICS) $$(ALTPICS)
 	$(POST_PROCESS_SO)
 
 fnamecheck: $(DYNLIB)
-	check_fnames -s $(C_SYNONYMS_H) -l $(DYNLIB) $(PICS) $(ALTPICS)
+	$(CHECK_FNAMES) -s $(C_SYNONYMS_H) -l $(DYNLIB) $(PICS) $(ALTPICS)
 
 $(LINTLIB): $$(SRCS) 
 	$(LINT.c) -o $(LIBNAME) $(SRCS) > $(LINTOUT) 2>&1 
