--- a/usr/src/ucbcmd/stty/Makefile
+++ b/usr/src/ucbcmd/stty/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -18,16 +17,18 @@
 # information: Portions Copyright [yyyy] [name of copyright owner]
 #
 # CDDL HEADER END
+
 #
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright (c) 1989 by Sun Microsystems, Inc.
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 
 PROG= stty
 
 PROGSRC= stty.c sttyparse.c sttytable.c
+OBJS=	$(PROGSRC:%.c=%.o)
 
 include ../Makefile.ucbcmd
 
@@ -37,13 +38,14 @@ FILEMODE=	755
 
 all: $(PROG) 
 
-$(PROG):	$(PROGSRC)
-		$(LINK.c) $(PROGSRC) -o $@ $(LDLIBS)
+$(PROG):	$(OBJS)
+		$(LINK.c) $(OBJS) -o $@ $(LDLIBS)
 		$(POST_PROCESS)
 
 install: all $(ROOTPROG)
 
 clean:
+	-$(RM) $(OBJS)
 
 lint:	lint_PROG
 
