PSARC 2005/487 sysidtool(1m) Integrated NFSv4 Prompts 6231897 ON changes in support of 5110062: nuke sysidnfs4(1m)

--- a/usr/src/cmd/fs.d/nfs/nfsmapid/Makefile
+++ b/usr/src/cmd/fs.d/nfs/nfsmapid/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,61 +19,53 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.
+# Copyright 2006 Sun Microsystems, Inc.
 # All rights reserved.  Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
 
-FSTYPE=		nfs
-
-TYPEPROG=	nfsmapid
-TESTPROG=	nfsmapid_test
-ATTMK=          $(TYPEPROG)
-
-POFILE= nfsmapid.po
-
-catalog: $(POFILE)
-
-$(POFILE): $(SRCS)
-	$(RM) $@
-	$(COMPILE.cpp) $(SRCS)	> $(POFILE).i
-	$(XGETTEXT) $(XGETFLAGS)	$(POFILE).i
-	sed "/^domain/d"	messages.po     > $@
-	$(RM) $(POFILE).i messages.po
+FSTYPE	  =	nfs
+TYPEPROG  =	nfsmapid
+TESTPROG  =	nfsmapid_test
+ATTMK	  =	$(TYPEPROG)
 
 include		../../Makefile.fstype
 
-LDLIBS +=	-lresolv -lnsl -lcmd -lrt -ldtrace
-
-SRCS=		nfsmapid.c nfsmapid_server.c nfsmapid_resolv.c
-DSRC=		nfsmapid_dt.d
-DOBJ=		$(DSRC:%.d=%.o)
-HDRS+=		nfsmapid_resolv.h
-OBJS=		$(SRCS:%.c=%.o)
+LDLIBS   +=	-L$(ROOT)/usr/lib/nfs -R/usr/lib/nfs
+LDLIBS   +=	-lnsl -lmapid -lrt -ldoor -ldtrace
+SRCS	  =	nfsmapid.c nfsmapid_server.c
+DSRC	  =	nfsmapid_dt.d
+DOBJ	  =	$(DSRC:%.d=%.o)
+OBJS	  =	$(SRCS:%.c=%.o)
 CPPFLAGS +=	-I../lib -D_POSIX_PTHREAD_SEMANTICS
+
+all:		$(TYPEPROG) $(TESTPROG)
 
 $(TYPEPROG):	$(OBJS) $(DSRC)
 		$(COMPILE.d) -s $(DSRC) -o $(DOBJ) $(OBJS)
 		$(LINK.c) -zignore -o $@ $(DOBJ) $(OBJS) $(LDLIBS)
 		$(POST_PROCESS)
 
-$(OBJS):	$(HDRS)
-
-#
-# Test program
-#
-TESTSRCS=	nfsmapid_test.c
-TESTOBJS=	$(TESTSRCS:%.c=%.o)
-TEST_OBJS=	$(TESTOBJS)
+TESTSRCS  =	nfsmapid_test.c
+TESTOBJS  =	$(TESTSRCS:%.c=%.o)
+TEST_OBJS =	$(TESTOBJS)
 
 $(TESTPROG):	$(TEST_OBJS)
 		$(LINK.c) -o $@ $(TEST_OBJS) $(LDLIBS)
 		$(POST_PROCESS)
 
-all:		$(TYPEPROG) $(TESTPROG)
+POFILE	  =	nfsmapid.po
+catalog:	$(POFILE)
+
+$(POFILE):	$(SRCS)
+		$(RM) $@
+		$(COMPILE.cpp) $(SRCS) > $@.i
+		$(XGETTEXT) $(XGETFLAGS) $@.i
+		sed "/^domain/d" messages.po > $@
+		$(RM) $@.i messages.po
 
 clean:
-		$(RM) $(OBJS) $(TESTOBJS) $(DOBJ)
+		$(RM) $(OBJS) $(TESTPROG) $(TESTOBJS) $(DOBJ) $(POFILE)
 
 lint:		$(SRCS) lint_SRCS
