6393890 move libprtdiag_psr to usr/src (fix open build) 6393898 move scadm to usr/src (fix open build)

--- a/usr/src/lib/libprtdiag_psr/sparc/desktop/picl/Makefile
+++ b/usr/src/lib/libprtdiag_psr/sparc/desktop/picl/Makefile
@@ -95,7 +95,7 @@ $(LINKED_DIRS):	$(USR_PLAT_DIR)
 $(LINKED_LIB_DIRS):	$(LINKED_DIRS)
 	-$(INS.dir.root.sys)
 
-$(LINKED_PRTDIAG_DIRS):	$(USR_PLAT_DIR)
+$(LINKED_PRTDIAG_DIRS):	$(LINKED_LIB_DIRS)
 	-$(INS.slink6)
 
 #
