--- a/usr/src/uts/common/io/ecpp.conf
+++ b/usr/src/uts/common/io/ecpp.conf
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -20,8 +19,8 @@
 # CDDL HEADER END
 #
 #
-# Copyright (c) 1995-1999, by Sun Microsystems, Inc.
-# All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -82,3 +81,10 @@ centronics-strobe-pulse-width=2;
 # The default value for ecpp-transfer-timeout is 90 seconds.
 
 ecpp-transfer-timeout=90;
+
+# The following note applies to x86 platforms only
+# If a system has a standard parallel port, but not enumerated
+# in the device tree, you may gain access to the port by uncommenting
+# the following lines and run "update_drv ecpp".
+#
+# name="lp" parent="/isa" interrupts=7 reg=1,0x378,0x8;
