PSARC/2006/213 FMRI Audit Token 6401913 add FMRI audit token type to the adt_* infrastructure

--- a/usr/src/cmd/auditreduce/Makefile
+++ b/usr/src/cmd/auditreduce/Makefile
@@ -42,7 +42,7 @@ POFILES=main.po option.po proc.po time.po token.po
 CPPFLAGS += -I$(TABLEDIR) -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64
 LAZYLIBS = $(ZLAZYLOAD) -ltsol $(ZNOLAZYLOAD)
 lint := LAZYLIBS = -ltsol
-LDLIBS += -lnsl -lbsm  $(LAZYLIBS)
+LDLIBS += -lnsl -lbsm -lscf $(LAZYLIBS)
 
 .KEEP_STATE:
 
