6356712 Boston/Seattle USB hubs need a name to picl class mapping 6410521 prtdiag does not display locations of PCI or USB devices

--- a/usr/src/cmd/picl/plugins/sun4u/boston/devtree/picldevtree.conf
+++ b/usr/src/cmd/picl/plugins/sun4u/boston/devtree/picldevtree.conf
@@ -20,12 +20,20 @@
 #
 
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
 #
 # Platform specific .conf file for picldevtree plug-in
+#
+# This file provides mappings of device names (i.e. the OBP "compatbile"
+# or "name" property) to appropriate PICL classes for devices
+# that are unique to the given platform.  This table is used by
+# the devtree PICL plug-in only when it cannot find a PICL class for
+# a given device.
+#
+#
 power-supply-fru-prom  	seeprom
 dimm-spd		seeprom
 motherboard-fru-prom	seeprom
@@ -34,3 +42,4 @@ rmc-fru-prom		seeprom
 sas-backplane-fru-prom	seeprom
 front-io-fru-prom	seeprom
 pdb-fru-prom		seeprom
+hub			usb
