--- a/usr/src/cmd/picl/plugins/sun4u/seattle/devtree/picldevtree.conf
+++ b/usr/src/cmd/picl/plugins/sun4u/seattle/devtree/picldevtree.conf
@@ -20,7 +20,7 @@
 #
 
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 
@@ -38,3 +38,4 @@ pdb-fru-prom			seeprom
 fiob-fru-prom			seeprom
 riser-fru-prom			seeprom
 sasbp-fru-prom			seeprom
+hub				usb
