--- a/usr/src/uts/i86pc/pci/Makefile
+++ b/usr/src/uts/i86pc/pci/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -21,7 +20,7 @@
 #
 #
 # uts/i86pc/pci/Makefile
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
@@ -60,6 +59,13 @@ INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
 # depends on misc/pci_autoconfig misc/pcihp
 #
 LDFLAGS		+= -dy -Nmisc/pcihp
+
+#
+# Name of the module is needed by the source, to distinguish from other
+# PCI/PCI-express nexi
+#
+CFLAGS		+= -D_MODULE_NAME="\"$(MODULE)\""
+LINTFLAGS	+= -D_MODULE_NAME="\"$(MODULE)\""
 
 #
 #	Default build targets.
