6262333 init section of .so dlopened from audit interface not being called

--- a/usr/src/cmd/sgs/rtld/sparc/Makefile
+++ b/usr/src/cmd/sgs/rtld/sparc/Makefile
@@ -30,8 +30,8 @@
 # secondary lists (less frequently used code, ie. a.out support).
 
 P_COMOBJS=	debugdata.o \
-		analyze.o	elf.o		globals.o	malloc.o \
-		mutex.o		paths.o		setup.o		util.o \
+		analyze.o	elf.o		external.o	globals.o \
+		malloc.o	paths.o		setup.o		util.o \
 		dlfcns.o	config_elf.o	locale.o	tsort.o \
 		getcwd.o	remove.o	move.o		tls.o \
 		cap.o
