6391344 Move virutal channels API versioning negotiation to the glvc driver

--- a/usr/src/uts/sun4v/Makefile.files
+++ b/usr/src/uts/sun4v/Makefile.files
@@ -109,7 +109,7 @@ MEMTEST_OBJS	+= memtest.o memtest_asm.o \
 #
 QCN_OBJS	= qcn.o
 VNEX_OBJS	= vnex.o
-GLVC_OBJS	= glvc.o
+GLVC_OBJS	= glvc.o glvc_hcall.o
 MDESC_OBJS	= mdesc.o
 
 #
